# shell-cmd-rs

./: Cargo.toml  GUIDE.md  README.md
src/: main.rs
